--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "connect-busboy": "0.0.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-formidable": "^1.2.0",
     "firebase": "^7.9.3",
